# youtube_telegram_bot_API_worker

./: .gitignore  README.md
docker/: Docker-compose.yml  Dockerfile
project/: config.py  pyproject.toml  selenium_session.py
project/api/: main.py
project/api/routes/api_front/: base.py  helper_functions.py
project/api/routes/api_front/test/: tables_testing.py  test_api_front.py
project/api/schemas/: requests.py
project/api/test/: test_api.py
project/api/tests/: tables_testing.py  test_api.py  test_api_front.py
project/api/url_parser/: parser.py  test_parser.py
project/database/: base_connection.py  db_service.py
project/database/Models/: tables.py
project/database/models/: tables.py
project/fixtures_test/: conftest.py
project/worker/: utilities_worker.py  worker.py
project/worker/tests/: test_worker.py
