[tool.poetry]
name = "youtube_telegram_worker_celery_docker"
version = "0.1.0"
description = ""
authors = ["Daniel Montoya <da03@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
TgCrypto = "^1.2.3"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
aiohttp = {extras=["cchardet", "aiodns"], version="^3.8.1"}
uvicorn = {extras = ["standard"], version = "^0.18.3"}
celery = "^5.2.7"
fastapi = "^0.85.0"
redis = "^4.3.4"
flower = "^1.2.0"
selenium = "^4.5.0"
SQLAlchemy = "^2.0.0b1"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pytest-mock = "^3.10.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
